# aether

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  aether.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yml
archive/notebooks/: Geoclip.ipynb
configs/: eval.yaml  inference.yaml  train.yaml  train_alignment.yaml  wandb.yaml
configs/callbacks/: batch_size_finder.yaml  default.yaml
configs/data/: butterfly_aef.yaml  butterfly_coords.yaml  butterfly_coords_text.yaml  butterfly_coords_text_unlabelled.yaml  butterfly_datamodule.yaml  heat_krakow.yaml  (+18 more)
data/: registry.txt
notebooks/: 01-GT-base-dataset.ipynb  02-TvdP-create-butterfly-aux-data.ipynb  03-TvdP-load-butterfly-data.ipynb  04-TvdP_generate-caption-templates.ipynb  06-TvdP-inference-language-alignment.ipynb  07-TvdP-sample-alignment-locations-S2BMS.ipynb  08-GT-aligment-visualisation.ipynb  09-GT-aef-tessera-datasplit-filtering.ipynb  Collect tabular data.ipynb  Geoclip.ipynb
scripts/: download_gee_data.py  download_gee_parallel.sh  schedule.sh
src/: data_utils.py  eval.py  gee_utils.py  inference.py  train.py
tests/: conftest.py  test_captions.py  test_configs.py  test_datamodules.py  test_datasets_and_datamodules.py  test_dynamic_gate_fusion_encoder.py  test_eo_encoders.py  test_gated_fusion_encoder.py  test_geo_encoders.py  test_models_and_sweeps.py  test_pred_heads.py  test_text_encoders.py  test_train.py  test_yield_africa.py  test_yield_africa_caption_builder.py  test_yield_africa_dual_tessera_dataset.py
(+218 files in other folders)
